# Nuke

./: .buildinfo  .dockerignore  .drone.yml  .env  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pylintrc  .versionrc.js  CHANGELOG.md  Makefile  Pipfile  README.md  appveyor.yml  changelog.html  changelog.md  changelog.rst  conf.py  dev-requirements.txt  development.rst  docs.Dockerfile  env-vars.html  features.html  genindex.html  get_changelog.py  guide.html  index.html  index.rst  init.py  install.cmd  install_dev_dependencies.sh  install_hiero.cmd  install_nuke.cmd  install_site_packages.bat  make.bat  menu.html  menu.py  menu.rst  nuke.code-workspace  (+23 more)
Documentation/: Makefile  make.bat
NodePresets/: user_presets.py
_sources/: changelog.md.txt  env-vars.rst.txt  features.rst.txt  guide.rst.txt  index.rst.txt  menu.rst.txt
_static/: basic.css  documentation_options.js
assets/: pyblish_lite.css
changelogs/: 004_0.6.md  008_0.10.md  009_0.11.md  011_0.13.md  014_0.16.md  016_0.18.md  020_0.20.md
data/: precomp.arnold.json  precomp.redshift.json
docs/: .gitignore  Makefile  changelog.md  conf.py  dev-requirements.txt  index.rst  jieba_dict.txt  menu.rst  pref.rst  re.rst  requirements.txt  spec.rst
features/: auto_comp.html  autolabel.html  autolabel.rst  cgteamwork.html  hiero_align_track_item.html  hiero_remove_version_suffix.html  motion_distort.html  motion_distort.rst  performance_timers.html  pyblish.html  rotopaint_dopesheet.html  rotopaint_dopesheet.rst  rotopaint_motion_distort.html  rotopaint_motion_distort.rst  rotopaint_uv_map.html  rotopaint_uv_map.rst  script_use_seq.html  shuffle_layers_by_re.rst  split_layer_group_by_re.html
guide/: grade.html  grade.rst  precomp.html
lib/: __about__.py  __init__.py  __version__.py  _ui.py  asset.py  batchcomp.py  callback.py  cgtwn.py  cgtwn_panels.py  comp.head.html  comp.py  comp.tags.json  dropdata_handler.py  edit.py  edit_panels.py  enable_later.py  executor.py  filetools.py  filetools.pyi  gizmo_convert.py  init.py  menu.py  node.py  nodeutil.py  nuketools.py  organize.py  orgnize.py  panels.py  precomp.arnold.json  precomp.py  pref.py  project_settings.py  pyblish_asset.py  pyblish_cgtwn.py  pyblish_lite_nuke.py  (+14 more)
(+763 files in other folders)
