[tool.poetry]
name = "nuke"
version = "0.20.4"
description = "Nuke plugins for WuLiFang Studio"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
repository="https://github.com/WuLiFang/Nuke"
documentation="https://wulifang.github.io/Nuke/"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^2.7"
Jinja2 = "2.10.1"
wlf = {path = "vendor/wlf-0.6.0-py2.py3-none-any.whl"}
cgtwq = {path = "vendor/cgtwq-3.0.0b0-py2.py3-none-any.whl"}
cgtwq-uploader = {path = "vendor/cgtwq_uploader-3.4.0-py2.py3-none-any.whl"}
pendulum = "2.0.5"
pyblish-lite = "0.8.4"
pluggy = "0.12.0"
urllib3 = "1.23"
win-unicode-console = {version = "0.5", platform = "win32"}
futures = "^3.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
pylint = "^1"
pytest = "^4"
rope = "^0.14.0"
doc8 = "^0.8.0"
sphinx = "^1"
sphinx-git = "^11.0.0"
recommonmark = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
