[tool.poetry]
name = "nuke"
version = "0.20.10"
description = "Nuke plugins for WuLiFang Studio"
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
repository="https://github.com/WuLiFang/Nuke"
documentation="https://wulifang.github.io/Nuke/"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^2.7"
jinja2 = "^2.11"
wlf = { git = "https://github.com/WuLiFang/wlf", tag = "v0.6.0" }
cgtwq = { git = "https://github.com/WuLiFang/cgtwq", tag = "v3.0.0-beta.4" }
cgtwq-uploader = { git = "https://github.com/WuLiFang/uploader", tag = "v3.6.3" }
pendulum = "^1" # upgrade blocked by https://github.com/sdispater/pendulum/issues/307
pyblish-lite = "^0.8.4"
pluggy = "^0.12.0"
urllib3 = "^1.23"
win-unicode-console = {version = "^0.5", platform = "win32"}
futures = "^3.3.0"
psutil = "^5.4.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
pylint = "^1"
pytest = "^4"
rope = "^0.14.0"
doc8 = "^0.8.0"
sphinx = "^1"
sphinx-git = "^11.0.0"
recommonmark = "^0.6.0"
more-itertools = "^5.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
